# Twitter_clone

./: README.md  db.sqlite3  pyproject.toml
django_forum/: settings.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
posts/: forms.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_post_image.py  0003_post_like.py  0004_remove_post_like_post_likes.py
static/css/: style.css
static/js/: posts.js
templates/: base.html  edit.html  posts.html
